k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: market
  namespace: hanzo
  labels:
    app: market
spec:
  selector:
    app: market
  ports:
    - name: web
      port: 80
      targetPort: 3000
    - name: api
      port: 3001
      targetPort: 3001
